# ParkHW1

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  CPPLINT.cfg  README.md  main.c  roman_to_arabic.c  roman_to_arabic.h  rta_test.cpp
.github/workflows/: ci.yml
lib/errors/: CMakeLists.txt
lib/errors/include/: errors.h
lib/matrix_calc/: CMakeLists.txt
lib/matrix_calc/include/: matrix_calc.h
lib/matrix_calc/src/: matrix_calc_consistent.c  matrix_calc_parallel.c
lib/matrix_calc/tests/: CMakeLists.txt
lib/matrix_calc/tests/src/: compare_reports.cpp  matrix_calc_test.cpp
lib/matrix_read/: CMakeLists.txt
lib/matrix_read/include/: matrix_read.h
lib/matrix_read/src/: matrix_read.c
lib/matrix_read/tests/: CMakeLists.txt
lib/matrix_read/tests/src/: matrix_read_test.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: utils.h
lib/utils/src/: utils.c
src/: main.c
